tests/ui/extenv/issue-55897.stderr
error: environment variable `NON_EXISTENT` not defined at compile time
  --> $DIR/issue-55897.rs:11:22
   |
LL |     include!(concat!(env!("NON_EXISTENT"), "/data.rs"));
   |                      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: Use `std::env::var("NON_EXISTENT")` to read the variable at run time
   = note: this error originates in the macro `env` (in Nightly builds, run with -Z macro-backtrace for more info)

error: suffixes on string literals are invalid
  --> $DIR/issue-55897.rs:16:22
   |
LL |     include!(concat!("NON_EXISTENT"suffix, "/data.rs"));
   |                      ^^^^^^^^^^^^^^^^^^^^ invalid suffix `suffix`

error[E0432]: unresolved import `prelude`
  --> $DIR/issue-55897.rs:1:5
   |
LL | use prelude::*;
   |     ^^^^^^^
   |     |
   |     unresolved import
   |     help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `env`
  --> $DIR/issue-55897.rs:4:9
   |
LL |     use env;
   |         ^^^ no `env` in the root
   |
help: consider importing this module instead
   |
LL |     use std::env;
   |         ~~~~~~~~

error: cannot determine resolution for the macro `env`
  --> $DIR/issue-55897.rs:6:22
   |
LL |     include!(concat!(env!("NON_EXISTENT"), "/data.rs"));
   |                      ^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0432`.
